# Umibato

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  run_umibato.py
data/synthetic/Dataset1/: metadata.txt  phi0.csv  step_dt_noize_S_nday.csv  x.tsv  z.tsv
data/synthetic/Dataset2/: biomass.txt  metadata.tsv  phi0.csv  phi1.csv  x.tsv
data/synthetic/Dataset3/: biomass.txt  phi0.csv  phi1.csv  x.txt  z.tsv
data/toy/: metadata.tsv  x.tsv
notebook/: conduct_experiments_on_synthetic_datasets.ipynb  make_test_case.ipynb  umibato_tutorial.ipynb
src/: CTRHMM.cpp  CTRHMMVETester.cpp  CTRHMMVariationalEstimator.cpp  SpecialFunctions.cpp  TestCTRHMM.cpp
src/include/: CTRHMMVETester.hpp  CTRHMMVariationalEstimator.hpp  SpecialFunctions.hpp  utils.hpp
testcase/input/: alpha.csv  beta.csv  ex_phi0.csv  ex_phi1.csv  ex_phi_phi_t00.csv  ex_phi_phi_t01.csv  ex_phi_phi_t10.csv  ex_phi_phi_t11.csv  ex_tau_n.csv  gamma.csv  lambda.csv  likelihood_given_z.csv  p_delta_t.csv  phi1.csv  pi.csv  q.csv  x.csv  xi1.csv  xi3.csv  y.csv  y_variance.csv
testcase/output/: C0.csv  C1.csv  ELBO.csv  alpha.csv  beta.csv  c.csv  ex_likelihood_given_z.csv  ex_phi0.csv  ex_phi1.csv  ex_phi_phi_t00.csv  ex_phi_phi_t01.csv  ex_phi_phi_t10.csv  ex_phi_phi_t11.csv  ex_tau_n.csv  lambda.csv  likelihood_given_z.csv  max_path.csv  max_path_log_prob.csv  p_delta_t0.csv  p_delta_t1.csv  phi0.csv  q_phi_entropy.csv  xi0.csv  xi1.csv  xi3.csv
tutorial/: umibato_tutorial.ipynb
umibato/: __init__.py  _gpmodule.py  _plotmodule.py  _umibato.py
